tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@mixed_attributes.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/mixed_attributes.txt
---
<div class="card priority-5" >
    <h3>Bob</h3>
    <p>Age: 18</p>
  </div>
