tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@nested_block.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/nested_block.txt
---
<div class="outer">
  <h1>Hello</h1>
  
  Before inner
  <p class="inner">World</p>

    Nested content
  
  After inner

</div>
