tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@trim_body_def.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/trim_body_def.txt
---
<div>
<a href="a">a</a>
<a href="b">b</a>
</div>
