tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@trim_def_doesnt_touch_body.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/trim_def_doesnt_touch_body.txt
---
<aside>
  hello
</aside>
