tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_escaping_ok@autoescape_include.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/escaping/autoescape_include.txt
---
Both escaped: &lt;p&gt;Some HTML chars &amp; more&lt;/p&gt;&lt;p&gt;Some HTML chars &amp; more&lt;/p&gt;
