tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_escaping_ok@filter_after_safe_value.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/escaping/filter_after_safe_value.txt
---
<P>SOME HTML CHARS & MORE</P>
